--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^5.1.1",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
+    "mermaid": "^11.12.2",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
     "satori": "^0.12.0",
@@ -27,10 +28,10 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.0",
-    "tailwindcss": "^4.0.0",
     "@types/node": "^22.10.2",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.9"
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "tailwindcss": "^4.0.0"
   }
 }
