--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^5.1.1",
     "fuse.js": "^7.0.0",
     "github-slugger": "^2.0.0",
+    "marked": "^17.0.1",
     "mermaid": "^11.12.2",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
